project/go/receive.out
nohup: ignoring input
  File "receive.go", line 1
    package main
            ^
SyntaxError: invalid syntax
